--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@ $('.calendar-3').calendar({
 			<div class="calendar-3"></div>
 		</div>
 	</div>
-	<script src="jQuery.min.js"></script>
-	<script src="jQuery-pseudo-ripple.js"></script>
-	<script src="jQuery-nao-calendar.js"></script>
-	<script src="jQuery-nao-input.js"></script>
+	<script src="jquery.min.js"></script>
+	<script src="jquery-pseudo-ripple.js"></script>
+	<script src="jquery-nao-calendar.js"></script>
+	<script src="jquery-nao-input.js"></script>
 	<script>
 	$('.calendar-1').calendar()
 	$('.calendar-2').calendar()
